@@ -4,6 +4,7 @@
   	<OrderVolLimit>		
   	</OrderVolLimit>
   	
+	<MarketData config="my_quote_dce_udp.config" />
 	<quote>
 		<!-- category: spif,cf,fulldepth,MDOrderStatistic or stock -->
 		<!-- exchange: support multiple exchange in an attribute seperated by comma, e.g. '0,1,G'--> 
